# my-web-socket-client

./: Cargo.toml
src/: connect.rs  error.rs  http_client_connector.rs  https_client_connector.rs  lib.rs  ws_callback.rs  ws_client.rs  ws_client_settings.rs
src/connect/: connect.rs  connect_to_http_endpoint.rs  connect_to_tls_endpoint.rs  mod.rs
src/ws_connection/: maybe_tls_web_socket_stream.rs  mod.rs  ws_connection.rs  ws_connection_inner.rs  ws_connection_single_threaded.rs
