[package]
name = "my-web-socket-client"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "base64",
] }
my-tls = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-tls.git" }
tokio = { version = "*", features = ["full"] }
hyper-tungstenite = { version = "*" }

future-utils = "*"
futures = "*"
async-trait = "*"

bytes = "*"
rand = "*"

http = "*"
my-http-client = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-http-client.git" }
